--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "browser-sync": "^2.26.3",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.1.0",
-    "gulp-sass": "^4.0.2"
+    "gulp-sass": "^4.0.2",
+    "node-normalize-scss": "^8.0.0"
   }
 }
